# RGB4D

./: .gitmodules  .travis.yml  CMakeLists.txt  README.MD
.github/workflows/: cmake.yml
ide/: CMakeLists.txt  cube.h  frag.glsl.h  main.cpp  vert.glsl.h
interpreter/: commands.h  commands.inl  debug_cli.h  file.h  imgui.ini  lib.h  loop.rgb4d  main.cpp  pch.h  test.ppen  test.rgb4d  test2.ppen  test_functions.rgb4d
llvm-frontend/: CMakeLists.txt  main.cpp  pch.h
